--- a/source/R5T.S0042/R5T.S0042.csproj
+++ b/source/R5T.S0042/R5T.S0042.csproj
@@ -2,6 +2,13 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <OutputType>Exe</OutputType>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\R5T.T0132\source\R5T.T0132\R5T.T0132.csproj" />
+    <ProjectReference Include="..\..\..\R5T.Z0006\source\R5T.Z0006\R5T.Z0006.csproj" />
+    <ProjectReference Include="..\..\..\R5T.Z0007\source\R5T.Z0007\R5T.Z0007.csproj" />
+  </ItemGroup>
 
 </Project>
